--- a/public/1-back/login.html
+++ b/public/1-back/login.html
@@ -7,7 +7,9 @@
   <title>乐淘电商</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" href="lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="css/common.css">
+  
 </head>
 <body class="body_bg">
   <!--
@@ -56,5 +58,7 @@
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="js/login.js"></script>
+  <script src="lib/nprogress/nprogress.js"></script>
+  <script src="js/commit.js"></script>
 </body>
 </html>
