--- a/public/1-back/index.html
+++ b/public/1-back/index.html
@@ -5,15 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>首页</title>
+  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-  <div>后台管理系统</div>
-  <!-- 头部 -->
-  <div class="le_topbar"></div>
+  
+  
   <!-- 乐淘侧边栏 -->
-  <div class="le_aside"></div>
+  <div class="le_aside">
+    <div class="bland">黑马31期</div>
+    <div class="user">
+      <img src="images/default.png" alt="">
+      <p>超级管理员</p>
+    </div>
+    <div class="nav">
+      <ul>
+        <li><a href="user.html" class="action"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+        <li><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
+          <ol>
+            <li><a href="first.html">一级分类</a></li>
+            <li><a href="second.html">二级分类</a></li>
+          </ol>
+        </li>
+        <li><a href="productor.html"><i class="glyphicon glyphicon-tags"></i>商品管理</a></li>
+      </ul>
+    </div>
+  </div>
   <!-- 右侧主体 -->
-  <div class="le main"></div>
-  <!-- 底部 -->
+  <div class="le_main">
+       <!-- 头部 -->
+      <div class="le_topbar">
+        <div class="le_left pull-left"><i class="glyphicon glyphicon-align-justify"></i></div>
+        <div class="le_right pull-right"><i class="glyphicon glyphicon-log-out"></i></div>
+      </div>
+      <!-- 中间主体 -->
+    <div class="container-fluid">
+        <ol class="breadcrumb mt_20">
+          <li><a href="#">系统管理</a></li>
+          <li class="active">用户管理</li>
+        </ol>
+     
+      <!-- 准备两个有宽高的容器 存放图表 -->
+      <div class="contaoner">
+        <div class="echarts_left pull-left"></div>
+        <div class="echarts_right pull-right"></div>
+      </div>
+  </div>
+</div>
+  <script src="./lib/jquery/jquery.min.js"></script>
+  <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <script src="./lib/nprogress/nprogress.js"></script>
+  <script src="./lib/echarts/echarts.min.js"></script>
+  <script src="js/commit.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
