--- a/public/1-back/index.html
+++ b/public/1-back/index.html
@@ -23,7 +23,7 @@
     <div class="nav">
       <ul>
         <li><a href="user.html" class="action"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
-        <li><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
+        <li class="category"><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
           <ol>
             <li><a href="first.html">一级分类</a></li>
             <li><a href="second.html">二级分类</a></li>
@@ -48,12 +48,44 @@
         </ol>
      
       <!-- 准备两个有宽高的容器 存放图表 -->
-      <div class="contaoner">
+      <div class="contaoner mt_20">
         <div class="echarts_left pull-left"></div>
         <div class="echarts_right pull-right"></div>
       </div>
   </div>
 </div>
+<!-- 模态框 
+ 1. 模态框大小
+        大 modal-lg
+        中 默认
+        小 modal-sm
+  2. 给标签添加 data-dismiss="modal"  关闭模态框
+-->
+    <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Launch demo modal
+    </button>
+     -->
+    <!-- 遮罩层 -->
+    <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
+      <!-- 模态框 -->
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+           <i class="glyphicon glyphicon-info-sign"></i><span>您确定要推出后台管理系统吗</span>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary">退出</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
@@ -61,5 +93,6 @@
   <script src="./lib/echarts/echarts.min.js"></script>
   <script src="js/commit.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/isLogin.js"></script>
 </body>
 </html>
