--- a/public/1-back/first.html
+++ b/public/1-back/first.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
         <li class="category"><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
-          <ol>
+          <ol style="display:none">
             <li class="action"><a href="first.html">一级分类</a></li>
             <li><a href="second.html">二级分类</a></li>
           </ol>
@@ -56,10 +56,10 @@
             <th>一级分类类名</th>
           </thead>
           <tbody>
-            <tr>
+            <!-- <tr>
               <td>1</td>
               <td>商务管理</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
         <!-- 分页标签 -->
@@ -115,13 +115,24 @@
       </div>
     </div>
 
+<!-- 模板 -->
+<script type="text/html" id="tmp">
+  {{each list v i}}
+    <tr>
+       <td>{{i+1+(page-1)*size}}</td>
+       <td>{{v.rows}}}</td>
+    </tr>
+  {{/each}}
+</script>
 
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
   <script src="./lib/echarts/echarts.min.js"></script>
+  <script src="lib/artTemplate/template-web.js"></script>
   <script src="js/commit.js"></script>
   <script src="js/isLogin.js"></script>
+  <script src="js/first.js"></script>
 </body>
 </html>
