--- a/public/1-back/index.html
+++ b/public/1-back/index.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="user.html" class="action"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
         <li class="category"><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
-          <ol>
+          <ol style="display:none">
             <li><a href="first.html">一级分类</a></li>
             <li><a href="second.html">二级分类</a></li>
           </ol>
@@ -61,10 +61,7 @@
         小 modal-sm
   2. 给标签添加 data-dismiss="modal"  关闭模态框
 -->
-    <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-      Launch demo modal
-    </button>
-     -->
+
     <!-- 遮罩层 -->
     <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
       <!-- 模态框 -->
