--- a/public/1-back/productor.html
+++ b/public/1-back/productor.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="user.html" class="action"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
         <li class="category"><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
-          <ol>
+          <ol style="display:none">
             <li><a href="first.html">一级分类</a></li>
             <li><a href="second.html">二级分类</a></li>
           </ol>
