--- a/public/1-back/user.html
+++ b/public/1-back/user.html
@@ -24,7 +24,7 @@
       <ul>
         <li class="action"><a href="user.html" class="action"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
         <li class="category"><a href="javascript:;"><i class="glyphicon glyphicon-list"></i>分类管理</a>
-          <ol>
+          <ol style="display:block">
             <li><a href="first.html">一级分类</a></li>
             <li><a href="second.html">二级分类</a></li>
           </ol>
@@ -60,44 +60,36 @@
             <th>操作</th>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>itcast</td>
-              <td>15757771111</td>
-              <td>正常</td>
-              <td><button class="btn btn-danger">禁用</button></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>itcast</td>
-                <td>15757771111</td>
-                <td>正常</td>
-                <td><button class="btn btn-primary">启用</button></td>
-              </tr>
+            <!-- 动态渲染 -->
           </tbody>
         </table>
-            <nav class="pull-right">
-                <ul class="pagination">
-                  <li>
-                    <a href="#" aria-label="Previous">
-                      <span aria-hidden="true">&laquo;</span>
-                    </a>
-                  </li>
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li>
-                    <a href="#" aria-label="Next">
-                      <span aria-hidden="true">&raquo;</span>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
+           <!-- 分页dom结构 -->
+             <div class="text-right">
+               <ul id="paginator"></ul>
+             </div>
         </div>
     </div>
 </div>
+
+<!-- 启用禁止模态框 -->
+<div class="modal fade" id="userModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+      </div>
+      <div class="modal-body">
+        <i class="glyphicon glyphicon-info-sign"></i><span>您确定要更改吗</span>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="submitBtn">确定</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- 模态框 
  1. 模态框大小
         大 modal-lg
@@ -105,14 +97,10 @@
         小 modal-sm
   2. 给标签添加 data-dismiss="modal"  关闭模态框
 -->
-    <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-      Launch demo modal
-    </button>
-     -->
     <!-- 遮罩层 -->
     <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
       <!-- 模态框 -->
-      <div class="modal-dialog modal-sm">
+      <div class="modal-dialog moda l-sm">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -123,19 +111,39 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">退出</button>
+            <button type="button" class="btn btn-primary" >退出</button>
           </div>
         </div>
       </div>
     </div>
 
-
+    <!-- 模板引擎 -->
+    <script type="text/html" id="tmp">
+      {{each rows v i}}
+        <tr>
+          <td>{{(page-1)*size + i+1}}</td>
+          <td>{{v.username}}</td>
+          <td>{{v.mobile}}</td>
+          <td>{{v.isDelete===1 ? "正常" : "禁用"}}</td>
+          <td class="btn-change" data-id="{{v.id}}">
+            {{ if v.isDelete === 1 }}
+            <button class="btn btn-danger">禁用</button>
+          {{ else }}
+            <button class="btn btn-success">启用</button>
+          {{ /if }}
+        </td>
+        </tr>
+      {{/each}}
+    </script>
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
+  <script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
   <script src="./lib/echarts/echarts.min.js"></script>
+  <script src="lib/artTemplate/template-web.js"></script>
   <script src="js/commit.js"></script>
   <script src="js/isLogin.js"></script>
+  <script src="js/user.js"></script>
 </body>
 </html>
