--- a/public/1-back/productor.html
+++ b/public/1-back/productor.html
@@ -119,7 +119,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">退出</button>
+            <button type="button" class="btn btn-primary" id="back">退出</button>
           </div>
         </div>
       </div>
