--- a/public/1-back/second.html
+++ b/public/1-back/second.html
@@ -49,7 +49,7 @@
           <li class="active">二级分类</li>
         </ol>
         <!-- 分类按钮 -->
-        <button class="btn btn-primary mb_20">添加分类</button>
+        <button class="btn btn-primary mb_20" id="addBtn">添加分类</button>
         <!-- 分类表格 -->
         <table class="table table-bordered">
           <thead>
@@ -59,36 +59,71 @@
             <th>二级分类LOGO</th>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>商务管理</td>
-              <td>商务</td>
-              <td><img src="images/none.png" alt=""></td>
-            </tr>
+            <!-- 模板渲染 -->
           </tbody>
         </table>
         <!-- 分页插件 -->
-        <nav class="pull-right">
-            <ul class="pagination">
-              <li>
-                <a href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li>
-                <a href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+        <div class="page-right pull-right">
+          <ul id="paginator"></ul>
+        </div>
   </div>
 </div>
+    <!-- 添加分类模态框 -->
+    <div class="modal fade" id="secondModal" tabindex="-1" aria-hidden="true">
+      <!-- 模态框 -->
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">添加分类</h4>
+          </div>
+          <div class="modal-body">
+            <form id="form">
+                <div class="form-group">
+                  <div class="dropdown">
+                      <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <span id="spanText">请选择一级分类</span>
+                        <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu">
+                        <!-- 模板渲染 -->
+                      </ul>
+                      <!-- 隐藏域 -->
+                      <input type="hidden" name="categoryId" id="cate"><!--提交name值-->
+                      <input type="hidden" name="hot" value="1"><!--接口需要的-->
+                  </div>
+                </div>
+              <div class="form-group">
+                <!-- 提交分类值 -->
+                <input type="text" class="form-control" name="brandName" placeholder="请输入二级分类">
+              </div>
+              
+              <div class="form-group">
+                <label class="btn btn-default" for="fileupload">上传图片</label>
+                <!--图片上传插件的用法
+                    1、指定name用于让后台获取图片。
+                    2、指定data-url 指定接口地址  
+                    3、multiple 可以上传多个文件
+                    单独提交文件表单
+                  -->
+                  <!-- 用于插件提交ajax地址的隐藏域 -->
+                <input type="file" name="pic1" data-url="/category/addSecondCategoryPic" id="fileupload" style="display: none;">
+              </div>
+              <div class="form-group" id="imgBox">
+                <img src="images/none.png" width="100">
+                  <!--图片地址 用于提交地址 -->
+                  <input type="hidden" name="brandLogo">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="submit" class="btn btn-primary" form="form" id="add">添加</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 <!-- 模态框 
  1. 模态框大小
         大 modal-lg
@@ -114,19 +149,43 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">退出</button>
+            <button type="button" class="btn btn-primary" id="back">退出</button>
           </div>
         </div>
       </div>
     </div>
 
+<!-- 模板引擎 -->
+    <script type="text/type" id="secondTmp">
+      {{each rows v i}}
+        <tr>
+          <td>{{(page-1)*size+(i+1)}}</td>
+          <td>{{v.categoryName}}</td>
+          <td>{{v.brandName}}</td>
+          <td><img src="{{v.brandLogo ? v.brandLogo : 'images/none.png'}}" height="50" alt=""></td>
+        </tr>
+      {{/each}}
+    </script>
 
+    <!-- 添加分类模板引擎 -->
+    <script type="text/html" id="addTmp">
+      {{each rows v i}}
+        <li><a href="#" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+      {{/each}}
+    </script>
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <!-- <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script> -->
+  <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
   <script src="./lib/echarts/echarts.min.js"></script>
+  <script src="lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+  <script src="lib/artTemplate/template-web.js"></script>
+  <!--文件上传包 -->
+  <script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+  <script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
   <script src="js/commit.js"></script>
   <script src="js/isLogin.js"></script>
+  <script src="js/second.js"></script>
 </body>
 </html>
