--- a/public/1-back/productor.html
+++ b/public/1-back/productor.html
@@ -48,52 +48,98 @@
           <li class="active">商品管理</li>
         </ol> 
         <!-- 商品按钮 -->
-        <button class="btn btn-default mb_20">添加商品</button>
+        <button class="btn btn-default mb_20" id="addBtn">添加商品</button>
         <!-- 商品表格 -->
         <table class="table table-bordered">
           <thead>
-            <th>序号</th>
-            <th>商品名称</th>
-            <th>商品描述</th>
-            <th>商品库存</th>
-            <th>商品尺寸</th>
-            <th>商品状态</th>
-            <th>操作</th>
+            <th style="width:10%">序号</th>
+            <th style="width:30%">商品名称</th>
+            <th style="width:20%">商品描述</th>
+            <th style="width:10%">商品库存</th>
+            <th style="width:10%">商品尺寸</th>
+            <th style="width:10%">商品状态</th>
+            <th style="width:10%">操作</th>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>【莹恋】MIZUNO美津浓V1GA159002乒乓球鞋男鞋女鞋室内综合训练鞋</td>
-              <td>描述123123</td>
-              <td>44</td>
-              <td>35-40</td>
-              <td>已上架</td>
-              <td><button class="btn btn-danger">下架</button></td>
-            </tr>
+           <!-- 模板渲染 -->
           </tbody>
         </table>
         <!-- 分页插件 -->
-        <nav class="pull-right">
-            <ul class="pagination">
-              <li>
-                <a href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li>
-                <a href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+       <div class="page-right pull-right">
+          <ul id="paginator"></ul>
+       </div>
   </div>
 </div>
+<!-- 添加分类模态框 -->
+<div class="modal fade" id="addModal" tabindex="-1" aria-hidden="true">
+    <!-- 模态框 -->
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">添加商品</h4>
+        </div>
+        <div class="modal-body">
+          <form id="form">
+              <div class="form-group">
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                      <span id="spanText">请选择二级分类</span>
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <!-- 模板渲染 -->
+                    </ul>
+                    <!-- 隐藏域 -->
+                    <input type="hidden" name="brandId" id="cate"><!--提交name值-->
+                    <input type="hidden" name="hot" value="1"><!--接口需要的-->
+                </div>
+              </div>
+              <!-- 提交分类值 -->
+          <div class="form-group">
+            <input type="text" class="form-control" name="proName" placeholder="请输入商品名称" >
+          </div>
+          <div class="form-group">
+             <textarea class="form-control" rows="3" name="proDesc" placeholder="请输入商品描述"></textarea>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="num" placeholder="请输入商品库存">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="size" placeholder="请输入商品尺码">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="oldPrice" placeholder="请输入商品原价">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="newPrice" placeholder="请输入商品现价">
+            </div>                                           
+            <div class="form-group">
+              <label class="btn btn-default" for="fileupload">上传图片</label>
+              <!--图片上传插件的用法
+                  1、指定name用于让后台获取图片。
+                  2、指定data-url 指定接口地址  
+                  3、multiple 可以上传多个文件
+                  单独提交文件表单
+                -->
+                <!-- 用于插件提交ajax地址的隐藏域 -->
+              <input type="file" multiple name="pic1" data-url="/category/addSecondCategoryPic" id="fileupload" style="display: none;">
+            </div>
+            <div class="form-group" id="imgBox">
+              <!-- 作用: 标记当前图片有没有上传满三张 -->
+
+                <!--图片地址 用于提交地址 -->
+                <input type="hidden" name="picStatus">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary" form="form" id="add">添加</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- 模态框 
  1. 模态框大小
         大 modal-lg
@@ -106,7 +152,7 @@
     </button>
      -->
     <!-- 遮罩层 -->
-    <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade" id="productModal" tabindex="-1" aria-hidden="true">
       <!-- 模态框 -->
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -125,13 +171,43 @@
       </div>
     </div>
 
+    <!-- tbody模板引擎 -->
+    <script type="text/html" id="productTmp">
+    {{each rows v i}}
+      <tr>
+          <td>{{(page-1)*size + (i+1)}}</td>
+          <td>{{v.proName}}</td>
+          <td>{{v.proDesc}}</td>
+          <td>{{v.num}}</td>
+          <td>{{v.size}}</td>
+          <td>{{v.statu==1 ? "已上架" : "已下架"}}</td>
+          <td>
+          {{if v.statu==1}}
+          <button class="btn btn-danger btn-danger">下架</button>
+          {{else}}
+         <button class="btn btn-danger btn-default">上架</button>
+          {{/if}}
+        </td>
+        </tr>
+    {{/each}}
+    </script>
 
+    <!-- 添加分类下拉列表模板渲染 -->
+    <script type="text/html" id="addTmp">
+    {{each rows v i}}
+      <li><a href="#" data-id="{{v.id}}">{{v.brandName}}</a></li>
+    {{/each}}
+    </script>
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <script src="lib/artTemplate/template-web.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
+  <script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+  <script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
+  <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
   <script src="js/commit.js"></script>
   <script src="js/isLogin.js"></script>
+  <script src="js/product.js"></script>
 </body>
 </html>
